# cti-transmute

./: .gitignore  .gitmodules  README.md  pyproject.toml
config/: generic.json.sample
cti_transmute/: transmute.py
cti_transmute/default/: __init__.py  exceptions.py  helpers.py
migrations/versions/: 932b4d5a18d0_initial.py
website/: init_db.py  install_db.py  run.py
website/api/: __init__.py  convert.py
website/db_class/: backup_db.py  db.py  restore_db.py
website/migrations/versions/: 0c2789533064_add_system_log_table.py  a031e3203cd4_add_comment_reaction_notification_.py  a4ecea6f4ec3_.py  be0b275f8264_add_is_active_and_deleted_at_to_convert.py  d7053174c298_.py
website/test/: misp_exemple.json  stix_exemple.json  testt.json
website/web/: __init__.py  home.py  utils.py
website/web/account/: account.py  account_core.py  account_form.py
website/web/convert/: convert.py  convert_core.py  convert_form.py  convert_root.py
website/web/static/css/: account.css  account_edit.css  comments.css  convert_form.css  core.css  detail.css  difference.css  history.css  home.css  list.css  refresh.css  sidebar.css
website/web/static/js/: pivotick.umd.js  toaster.js
website/web/static/pivotick/: SimulationWorker-BQcw9ZV7.js  SimulationWorker-CMCzaGDQ.js  index-BZ91P2g-.js  index-B_yZs6xd.js  pivotick.css  pivotick.es.js  pivotick.iife.js  pivotick.js  pivotick.umd.cjs  pivotick.umd.js
website/web/templates/: access_denied.html  base.html  home.html  list.html  sidebar.html
website/web/templates/account/: account_index.html  account_notifications.html  (+3 more)
(+18 files in other folders)
