[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cti-transmute"
version = "0.1.0"
description = "CTI Transmute is an online service to facilitate the conversion of Cyber Threat Intelligence between MISP standard and other formats."
readme = "README.md"
authors = [
    {name = "Christian Studer", email = "christian.studer@circl.lu"}
]
requires-python = ">=3.10"

dependencies = [
    "flask>=3.1.1",
    "flask-restx>=1.3.0",
    "flask-wtf>=1.2.2",
    "misp-stix>=2025.6.12",
]

[project.scripts]
start_website = "bin.start_website:main"
