[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cti-transmute"
version = "0.1.0"
description = "CTI Transmute is an online service to facilitate the conversion of Cyber Threat Intelligence between MISP standard and other formats."
readme = "README.md"
authors = [
    {name = "Christian Studer", email = "christian.studer@circl.lu"}
]
requires-python = ">=3.10"

dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-restx>=1.3.0",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "misp-stix>=2025.11.12",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]

[project.scripts]
start_website = "bin.start_website:main"
